Fix scrollbar visibility

--- a/style.css
+++ b/style.css
@@ -17,10 +17,6 @@ h1 {
     font-weight: normal;
 }
 
-body {
-    overflow: hidden;
-}
-
 body, html {
     margin: 0;
     height: 100%;
